generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Employee {
  id            String  @id @unique @default(cuid())
  employeeNum   Int     @unique
  name          String
  rules         String
  day           Day[]
  overWrites    Overwrites[]
}

model Day {
  id            String  @id @default(cuid())
  name          String
  employee      Employee @relation(fields: [employeeNum], references: [employeeNum])
  employeeNum   Int
  week          Week    @relation(fields: [weekId], references: [id])
  weekId        String
  overWrites    Overwrites[]
}

model Week {
  id        String  @id @default(cuid())
  week      Int
  day       Day[]
  year      Year    @relation(fields: [yearId], references: [id])
  yearId    String
}

model Year {
  id    String  @id @default(cuid())
  name  String  @unique
  week  Week[]
}

model Overwrites {
  id           String  @id @default(cuid())
  day          Day @relation(fields: [dayId], references: [id])
  dayId        String
  employee     Employee @relation(fields: [employeeNum], references: [employeeNum])
  employeeNum  Int
}